# TheSystem

./: TheSystem.cabal  TheSystem.cabal~  asd  asd~  stack.yaml  stack.yaml~  teste  teste2  teste2~  teste~  todo.org  todo.org~
app/: Main.hs  Main.hs~  Project.hs~
src/: 1Projects.hs~  Activities.hs  Activities.hs~  Command.hs  Command.hs~  Data.hs  Data.hs~  Helper.hs  Helper.hs~  Parser.hs  Parser.hs~  Project.hs  Project.hs~  ProjectS.hs  ProjectS.hs~  Projects.hs~  Scheduler.hs  Scheduler.hs~  StateAndInfer.hs  StateAndInfer.hs~  TotalProject.hs  TotalProject.hs~
