name:                TheSystem
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/TheSystem#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     
  build-depends:       base >= 4.7 && < 5, parsec
  default-language:    Haskell2010

executable TheSystem-exe
  hs-source-dirs:      app, src
  main-is:             Main.hs
--  extensions:          FlexibleInstances, UndecidableInstances
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, time, parsec, datetime >= 0.3.1
                     , directory >= 1.2.2
                     , TheSystem
  default-language:    Haskell2010

test-suite TheSystem-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , TheSystem
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/TheSystem
